--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
                   <div class="scroll-text">
                     <p>ここに、一つのことを成し遂げた卒業生がいる。</p>
                     <p>デヴィタ・プジ・プスピタサリ</p>
-                    <p>彼女は今、新たなステージへと進もうとしている。私たちみんなの期待を背負って。</p>
-                    <p>しかし、彼女は我々の期待などものともしない。我々は単に彼女の人生の一部に過ぎないからだ。誰もが想像することができない、自分の道を極め続けるに違いない。</p>
-                    <p>誰も彼女の未来を想像できない。本人もその未来を読むことはできない。</p>
+                    <p>誰も彼女の未来を想像できない。彼女も自分のを読むことはできない。</p>
                     <p>しかし、未来は知っている。彼女が何者なのか、何を成し遂げるのかを。</p>
                     <p>君の卒業を祝して。成田充より。</p>
                   </div>
