--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <div class="scroll-text">
                     <p>ここに、一つのことを成し遂げた卒業生がいる。</p>
                     <p>デヴィタ・プジ・プスピタサリ</p>
-                    <p>誰も彼女の未来を想像できない。彼女も自分のを読むことはできない。</p>
+                    <p>誰も彼女の未来を想像できない。彼女も自分の未来を読むことはできない。</p>
                     <p>しかし、未来は知っている。彼女が何者なのか、何を成し遂げるのかを。</p>
                     <p>君の卒業を祝して。成田充より。</p>
                   </div>
